--- a/config.json
+++ b/config.json
@@ -81,6 +81,10 @@
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "量子资源站"
     },
+    "caoliu": {
+      "api": "https://www.jiujiure00.com/api.php/provide/vod/at/xml",
+      "name": "草榴资源站"
+    },
     "xiaomaomi": {
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
